@@ -122,6 +122,10 @@ public class KeyMovePanel extends RMTablePanel< KeyMove >
             }
           }
         }
+        else
+        {
+          editUpgrade.setEnabled( false );
+        }
       }
     } );
 
@@ -437,7 +441,7 @@ public class KeyMovePanel extends RMTablePanel< KeyMove >
       KeyMove km = getRowObject( rows[0] );
       for ( DeviceUpgrade du : remoteConfig.getDeviceUpgrades() )
       {
-        if ( du.getDeviceType().get_Type() == km.getDeviceType() && du.getSetupCode() == km.getSetupCode() )
+        if ( du.getDeviceType().getNumber() == km.getDeviceType() && du.getSetupCode() == km.getSetupCode() )
         {
           List< Remote > remotes = new ArrayList< Remote >( 1 );
           remotes.add( remoteConfig.getRemote() );
